--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,20 +1,191 @@
 {
-    "home": {
-      "iconicCollections": "Our Iconic Collections",
-      "fleurie": "Fleurie",
-      "shopFleurie": "Shop Fleurie",
-      "zingara": "Zingara",
-      "shopZingara": "Shop Zingara",
-      "ourIconicCollections": "Our Iconic Collections",
-      "meetingTraditionInnovation": "A meeting between tradition and innovation for real works of art to wear",
-      "madreperla": "Madreperla",
-      "eleganceShiningHarmony": "Elegance and shining harmony",
-      "discoverEarrings": "Discover Earrings",
-      "uraniaNecklace": "Urania Necklace",
-      "shopNow": "Shop Now",
-      "comeVisitUs": "Come visit us",
-      "welcomeYou": "We would be delighted to welcome you so that you may discover and try on your favorite creations.",
-      "bookAnAppointment": "Book an Appointment"
+  "home": {
+    "iconicCollections": "Iconic Collections",
+    "fleurie": "Fleurie",
+    "fleurieDescrizioni": "Precious stones, refined cuts, embody elegance",
+    "shopFleurie": "SHOP FLEURIE",
+    "zingaraDescrizioni": "The purity of gold and the hammered finish in a captivating play of light and movement",
+    "zingara": "Zingara",
+    "shopZingara": "SHOP ZINGARA",
+    "ourIconicCollections": "Iconic Collections",
+    "meetingTraditionInnovation": "A meeting of tradition and innovation, incredible wearable works of art",
+    "madreperla": "Mother of Pearl",
+    "eleganceShiningHarmony": "Elegance and shining harmony",
+    "discoverEarrings": "DISCOVER",
+    "uraniaNecklace": "Urania Necklace",
+    "uraniaDescrizione": "Yellow gold necklace",
+    "shopNow": "DISCOVER",
+    "comeVisitUs": "Come Visit Us",
+    "welcomeYou": "We would be pleased to welcome you to discover and try our favorite creations.",
+    "bookAnAppointment": "BOOK AN APPOINTMENT"
+  },
+  "navbar": {
+    "shop": "Shop",
+    "collections": "Collections",
+    "about": "The Maison",
+    "highjewellery": "HIGH JEWELLERY",
+    "fineobject":"SILVERWARE",
+    "gifts":"GIFTS",
+    "bracelets":"Bracelets",
+    "rings":"Rings",
+    "necklaces":"Necklaces",
+    "earrings":"Earrings",
+    "enamelledchains":"Enameled Chains",
+    "animals":"Animals",
+    "sea":"Sea",
+    "forher":"For Her",
+    "forhim":"For Him",
+    "thehouse":"THE MAISON",
+    "story":"Maison Cusi",
+    "expertise":"CONTACTS",
+    "bookanappointment":"Book an Appointment",
+    "customerservice":"Customer Service",
+    "contactus":"Contacts"
+  },
+  "prodotti": {
+    "bracelets":"Bracelets",
+    "bracelets_description":"Cusi bracelets, original and sophisticated, add a touch of distinctive elegance to the wrist. Each piece is carefully crafted to offer a refined and timeless style.",
+    "rings":"Rings",
+    "rings_description":"Explore Cusi's ring collection, finely crafted with high-quality materials and adorned with sparkling stones and precious gems. Each ring is a unique masterpiece that enhances the beauty of the wearer.",
+    "necklaces":"Necklaces",
+    "necklaces_description":"Cusi necklaces embody unmistakable vitality and luminosity, enhancing the décolleté with fine materials and sophisticated design. Perfect for those who want to express a brilliant personality.",
+    "earrings":"Earrings",
+    "earrings_description":"Cusi earrings, shining and refined, capture the essence of elegance. With intricate details and a touch of luxury, each pair illuminates the face of the wearer, turning every moment into a celebration of style.",
+    "enamelledchains":"Enameled Chains",
+    "enamelledchains_description":"Cusi enameled chains, vibrant and sophisticated, add a touch of color and uniqueness to any look. Perfect for those who want to stand out with style.",
+    "animals":"Animals",
+    "animals_description":"Cusi animal sculptures, detailed and fascinating, bring a touch of nature and craftsmanship to any environment. Perfect for art and animal lovers.",
+    "sea":"Sea",
+    "sea_description":"Cusi sea jewelry, inspired by the beauty of the oceans, evokes the enchantment of the waves and the serenity of the coasts. Ideal for those who want to carry a piece of the sea wherever they go.",
+    
+    "zingara_description":"The softness of gold and the hammered finish create a captivating play of light and movement.",
+    "tycoon_description":"Elegance and boldness merge in Cusi's Tycoon collection. Jewelry with innovative design and high-quality materials, designed for those who want to express confidence and sophistication on every occasion.",
+    "bollywood_description":"Whether you're looking for a red carpet necklace or a ring that captures the festive spirit of Bollywood, each piece in the collection allows you to express your individuality with unparalleled grace.",
+    "urania_description":"The harmony of celestial orbits captured and imprinted in jewelry by our master artisans.",
+    "fleurie_description":"Where elegance embraces the soul, transforming every woman into a precious, loved, and special flower.",
+    
+    "filter":"Filters",
+    "sortby":"Sort by",
+    "featured":"Trending",
+    "pricedescending":"Price Descending",
+    "priceascending":"Price Ascending",
+    "stones":"Stones",
+    "diamond":"Diamond",
+    "malachite":"Malachite",
+    "nacre":"Mother of Pearl",
+    "sapphire":"Sapphire",
+    "ruby":"Ruby",
+    "emerald":"Emerald",
+    "collections":"Collections",
+    "materials":"Materials",
+    "yellowgold":"Yellow Gold",
+    "whitegold":"White Gold",
+    "pinkgold":"Rose Gold",
+    "blackgold":"Black Gold",
+    "platinum":"Platinum",
+    "apply":"APPLY",
+    "reset":"RESET"
+  },
+  "itemdetails": {
+    "addtoshoppingbag":"SHOP NOW",
+    "reference":"REFERENCE",
+    "orderbyphone":"ORDER BY PHONE",
+    "bookanappointment":"BOOK AN APPOINTMENT",
+    "details":"DETAILS",
+    "shipping&returns":"SHIPPING & RETURNS",
+    "soldout":"SOLD OUT",
+    "tax":"Tax Included",
+    "selectquantity":"Select Quantity",
+    "shipping&returns_descriptions":"Returns and exchanges are free for online orders if requested within 30 days of the delivery date. Returns and exchanges can be made in person at one of the Maison's selected boutiques. We invite you to call our personal consultants to coordinate services. Customized, engraved, or damaged creations cannot be returned. After receiving the return, the Maison will conduct a quality check. You will receive further information throughout the process and the refund will be processed within 14 days."
+  },
+  "checkout": {
+    "billinginformation":"Billing Information",
+    "firstname":"First Name",
+    "lastname":"Last Name",
+    "country": "Country",
+    "streetaddress": "Street Address",
+    "city":"City",
+    "state":"State",
+    "zipcode":"ZIP Code",
+    "next":"NEXT",
+    "back":"BACK",
+    "billing":"Billing",
+    "contactinfo":"Contact Information",
+    "placeorder": "PLACE ORDER",
+    "required":"required",
+    "phonenumber":"Phone Number"
+  },
+  "shoppinglist": {
+    "earrings": "EARRINGS",
+    "bracelets": "BRACELETS",
+    "necklaces": "NECKLACES",
+    "rings": "RINGS",
+    "curatedPieces": "Curated Pieces",
+    "soonToBeStaples": "Discover our precious creations",
+    "artisanalGoldEarrings": "Artisanal Gold Earrings,<br> Uniquely Crafted.",
+    "shopEarrings": "SHOP EARRINGS",
+    "handcraftedGoldBracelets": "Bracelets with <br> elegant unique shapes",
+    "shopBracelets": "SHOP BRACELETS",
+    "rareDiamondsGemstones": "Diamonds and Precious Stones <br> with Unique Settings.",
+    "shopNecklaces": "SHOP NECKLACES",
+    "uniqueLuxuryRings": "Unique Luxury Rings<br> with Rare Elegance.",
+    "shopRings": "SHOP RINGS"
+  },
+  "footer": {
+    "signUpToOurNewsletter": "SIGN UP TO OUR NEWSLETTER",
+    "beTheFirstToHear": "Discover new arrivals and other extraordinary news from the world of Cusi.",
+    "customerService": "CUSTOMER SERVICE",
+    "ourServices": "Our Services",
+    "productCare": "Product Care",
+    "shippingReturns": "Shipping & Returns",
+    "sizeChart": "Size Chart",
+    "faq": "Frequently Asked Questions",
+    "subscribe": "SUBSCRIBE",
+    "yourEmail": "Your Email",
+    "contact": "CONTACT US",
+    "contact2": "Contact Us",
+    "bookAnAppointment": "Book an Appointment",
+    "boutiques": "Boutiques",
+    "social": "SOCIAL",
+    "instagram": "Instagram",
+    "facebook": "Facebook",
+    "copyright": "Copyright © 2024 CUSI. All rights reserved.",
+    "copyright2": "© 2024 CUSI. All rights reserved.",
+    "privacyPolicy": "Privacy Policy",
+    "cookiePolicy": "Cookie Policy",
+    "legal": "Legal Notice"
+  },
+  "maison": {
+    "boutiques": "Boutiques",
+    "welcomeMessage": "We would be pleased to welcome you to discover and try your favorite creations.",
+    "milano": "Milan",
+    "viaMontenapoleone": "Via Montenapoleone 21/A, 20121, Italy",
+    "mondayToSaturday": "Monday - Saturday",
+    "openingHours1": "10:30-13:30",
+    "openingHours2": "15:00-19:00",
+    "contactUs": "Contact Us",
+    "milanoPhoneNumber": "(+39) 0276014323",
+    "portofino": "Portofino",
+    "calataMarconi": "Calata Marconi 14, 16034 Italy",
+    "portofinoPhoneNumber": "(+39) 0185267103",
+    "locarno": "Locarno",
+    "viaNationale": "Via Nationale 1, 6600 Switzerland",
+    "locarnoPhoneNumber": "(+41) 0917512170"
+  },
+  "maison_story": {
+    "title": "Our Story",
+    "intro": "The story of a family, passed down through generations, bringing the art of fine jewelry to life.",
+    "beginnings": {
+      "title": "The Beginnings",
+      "description": "The story of Cusi begins in Milan in 1886, when goldsmith Giovanni Cusi laid the foundations for a legacy that has spanned centuries. From the outset, the Maison has distinguished itself for its impeccable craftsmanship and its passion for creating jewelry that captures the beauty and essence of the wearer."
+    },
+    "heritage": {
+      "title": "Our Heritage",
+      "description": "Over the decades, the Maison has seen generations of artisans and designers who have dedicated themselves to preserving and innovating the art of jewelry making. Each piece created tells a story of dedication, expertise, and a deep love for the craft. The Maison's commitment to excellence and beauty has always been the cornerstone of its philosophy."
+    },
+    "today": {
+      "title": "Today",
+      "description": "Today, the Maison continues to honor its heritage while embracing modernity. Our creations reflect a perfect blend of tradition and innovation, offering timeless elegance to those who wear them. The Maison remains a beacon of Italian luxury, renowned for its exceptional quality and unrivaled design."
     }
   }
-  
+}
