--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -61,7 +61,7 @@
     "zingara_description":"La morbidezza dell'oro e la finitura martellata danno vita a un affascinante gioco di luce e movimento.",
     "tycoon_description":"Eleganza e audacia si fondono nella collezione Tycoon di Cusi. Gioielli dal design innovativo e realizzati con materiali di alta qualità, pensati per chi desidera esprimere sicurezza e raffinatezza in ogni occasione.",
     "bollywood_description":"Sia che tu stia cercando un collier da red carpet o un anello che catturi lo spirito festoso di Bollywood, ogni gioiello della collezione ti permette di esprimere la tua individualità con una grazia senza pari. ",
-    "urania_description":"L'armonia delle orbite celesti catturata e impressa nei gioielli dei nostri maestri artigiani.",
+    "urania_description":"L'armonia delle orbite celesti catturata e impressa nei gioielli dai nostri maestri artigiani.",
     "fleurie_description":"Dove l'eleganza abbraccia l'anima, trasformando ogni donna in un fiore prezioso, amato e speciale.",
 
     "filter":"Filtri",
