--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -372,7 +372,7 @@
     },
     {
       "title": "Legge applicabile e foro competente",
-      "content": "I presenti Termini di utilizzo sono disciplinati e interpretati in base alla legge Italiana senza riferimento a disposizioni sui conflitti di legge. Eventuali controversie saranno risolte in Tribunale."
+      "content": "I presenti Termini di utilizzo sono disciplinati e interpretati in base alla legge Italiana senza riferimento a disposizioni sui conflitti di legge. Eventuali controversie saranno risolte in Tribunale.\n\n"
     }
   ]
 },
@@ -431,7 +431,7 @@
     },
     {
       "title": "Legge applicabile e foro competente",
-      "content": "I presenti Termini di utilizzo sono disciplinati e interpretati in base alla legge Italiana senza riferimento a disposizioni sui conflitti di legge. Eventuali controversie saranno risolte in Tribunale."
+      "content": "I presenti Termini di utilizzo sono disciplinati e interpretati in base alla legge Italiana senza riferimento a disposizioni sui conflitti di legge. Eventuali controversie saranno risolte in Tribunale.\n\n"
     }
   ]
 },
@@ -479,7 +479,7 @@
   },
   "section11": {
     "title": "Google Analytics",
-    "content": "Il nostro sito utilizza Google Analytics di Google, Inc. (di seguito 'Google') per generare statistiche sull'utilizzo del sito web; Google Analytics utilizza cookie (non di terze parti) che non memorizzano dati personali. Le informazioni ottenute dai cookie sull'uso del sito web da parte degli utenti (compresi gli indirizzi IP) saranno trasmesse dal browser dell'utente a Google, ubicato al 1600 Amphitheatre Parkway, Mountain View, CA 94043, Stati Uniti, e memorizzate sui server dell'azienda. <br/><br/> In conformità alle condizioni di servizio vigenti, Google utilizzerà queste informazioni, in qualità di responsabile autonomo del trattamento, per tracciare ed esaminare l'uso del sito web, compilare report sulle attività del sito web per gli operatori del sito, e fornire altri servizi relativi alle attività del sito web, ai metodi di connessione (mobile, PC, browser utilizzati, ecc.), e ai metodi di ricerca e raggiungimento delle pagine del sito web. Google potrebbe anche trasferire queste informazioni a terzi ove richiesto dalla legge o laddove tali terzi trattino le suddette informazioni per conto di Google. Google non assocerà gli indirizzi IP degli utenti a nessun altro dato posseduto da Google. Utilizzando questo sito, l'utente acconsente al trattamento dei propri dati da parte di Google per i metodi e le finalità indicati sopra. <br/><br/> In base a un accordo specifico (DPA), Google Analytics è stato impostato per anonimizzare gli indirizzi IP degli utenti che visitano il nostro sito web. L'anonimizzazione comporta la mascheratura dell'ultima parte dell'indirizzo IP del visitatore, rendendolo impossibile da ricondurre al singolo utente. <br/><br/> La trasmissione di tali dati è disciplinata da un accordo specifico tra l'azienda e Google Inc. Per ulteriori informazioni sulle politiche di protezione dei dati di Google, è possibile consultare il seguente link: https://policies.google.com/privacy?hl=it."
+    "content": "Il nostro sito utilizza Google Analytics di Google, Inc. (di seguito 'Google') per generare statistiche sull'utilizzo del sito web; Google Analytics utilizza cookie (non di terze parti) che non memorizzano dati personali. Le informazioni ottenute dai cookie sull'uso del sito web da parte degli utenti (compresi gli indirizzi IP) saranno trasmesse dal browser dell'utente a Google, ubicato al 1600 Amphitheatre Parkway, Mountain View, CA 94043, Stati Uniti, e memorizzate sui server dell'azienda. <br/><br/> In conformità alle condizioni di servizio vigenti, Google utilizzerà queste informazioni, in qualità di responsabile autonomo del trattamento, per tracciare ed esaminare l'uso del sito web, compilare report sulle attività del sito web per gli operatori del sito, e fornire altri servizi relativi alle attività del sito web, ai metodi di connessione (mobile, PC, browser utilizzati, ecc.), e ai metodi di ricerca e raggiungimento delle pagine del sito web. Google potrebbe anche trasferire queste informazioni a terzi ove richiesto dalla legge o laddove tali terzi trattino le suddette informazioni per conto di Google. Google non assocerà gli indirizzi IP degli utenti a nessun altro dato posseduto da Google. Utilizzando questo sito, l'utente acconsente al trattamento dei propri dati da parte di Google per i metodi e le finalità indicati sopra. <br/><br/> In base a un accordo specifico (DPA), Google Analytics è stato impostato per anonimizzare gli indirizzi IP degli utenti che visitano il nostro sito web. L'anonimizzazione comporta la mascheratura dell'ultima parte dell'indirizzo IP del visitatore, rendendolo impossibile da ricondurre al singolo utente. <br/><br/> La trasmissione di tali dati è disciplinata da un accordo specifico tra l'azienda e Google Inc. Per ulteriori informazioni sulle politiche di protezione dei dati di Google, è possibile consultare il seguente link: \n\n\nhttps://policies.google.com/privacy?hl=it.<br/><br/> "
   }
 }
 
