--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -63,6 +63,7 @@
     "bollywood_description":"Sia che tu stia cercando un collier da red carpet o un anello che catturi lo spirito festoso di Bollywood, ogni gioiello della collezione ti permette di esprimere la tua individualità con una grazia senza pari. ",
     "urania_description":"L'armonia delle orbite celesti catturata e impressa nei gioielli dai nostri maestri artigiani.",
     "fleurie_description":"Dove l'eleganza abbraccia l'anima, trasformando ogni donna in un fiore prezioso, amato e speciale.",
+    "avviso":"Attualmente non ci sono prodotti in questa sezione. Tornate presto per scoprire le novità in arrivo!",
 
     "filter":"Filtri",
     "sortby":"Ordina",
