--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -88,7 +88,7 @@
     "reset":"REIMPOSTA"
   },
   "itemdetails": {
-    "addtoshoppingbag":"ACQUISTA ORA",
+    "addtoshoppingbag":"ACQUISTA",
     "reference":"REFERENZA",
     "orderbyphone":"ORDINA PER TELEFONO",
     "bookanappointment":"PRENOTA UN APPUNTAMENTO",
