--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -174,10 +174,10 @@
     "openingHours1": "10:30 AM - 1:30 PM",
     "openingHours2": "3:00 PM - 7:00 PM",
     "contactUs": "Contact Us",
-    "milanoPhoneNumber": "(+39) 0276014323",
+    "milanoPhoneNumber": "(+39) 02.76014323",
     "portofino": "Portofino",
     "calataMarconi": "Calata Marconi 14, 16034 Italy",
-    "portofinoPhoneNumber": "(+39) 0373214621",
+    "portofinoPhoneNumber": "(+39) 0185.269241",
     "bookAppointment": "Book an Appointment",
     "staffResponse": "Our staff will respond Monday to Friday from 9 AM to 7 PM and Saturday from 9 AM to 5 PM.",
     "title": "Title*",
